<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cegep_heritage.athenaeummusica.AlbumManipulationActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/edtxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imgBtnImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnImage"
        android:layout_width="147dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgBtn_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModifyHeader"
        app:srcCompat="@drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/edtxtArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/manipulate_spacing"
        android:ems="10"
        android:hint="@string/artist"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imgBtnImage"
        app:layout_constraintTop_toBottomOf="@+id/edtxtName" />

    <TextView
        android:id="@+id/txtModifyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_album"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/ddlGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnImage" />

    <EditText
        android:id="@+id/edtxtReleaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="@dimen/manipulate_spacing"
        android:ems="10"
        android:hint="@string/release_year"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtArtist" />

    <Spinner
        android:id="@+id/ddlFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ddlGenre" />

    <EditText
        android:id="@+id/edtxtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="@dimen/manipulate_spacing"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtReleaseYear" />

    <Button
        android:id="@+id/btnCommit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_manButtons"
        android:layout_marginStart="60dp"
        android:text="@string/button_add_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancle"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_manButtons"
        android:layout_marginStart="@dimen/manipulate_spacing"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCommit" />
</android.support.constraint.ConstraintLayout>
